// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  margin: 0.5rem;
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with breakpoints 1`] = `
.c0 {
  margin: 0.5rem;
}

@media only screen and (min-width:1280px) {
  .c0 {
    margin: 0.75rem;
  }
}

<div
  class="c0"
>
  Hello world!
</div>
`;

exports[`it works with theme 1`] = `
.c0 {
  margin: 20px;
}

<div
  class="c0"
>
  Hello world!
</div>
`;
